fix align problems

--- a/src/app/Home.styles.scss
+++ b/src/app/Home.styles.scss
@@ -18,6 +18,7 @@
     gap: 31.4px;
 }
 
+
 .firstSection__infoContainer{
     display: flex;
     flex-direction: column;
@@ -46,11 +47,14 @@
 
     .infoContainer__menuNavigate{
         display: flex;
+        justify-content: center;
+        align-items: center;
         gap: 15px;
         margin-top: 21px;
         
         .menuNavigate--downloadCV{
             background-color: #DDBA00;
+            border: 1px solid #DDBA00;
             font-size: 12px;
             width: 80px;
             height: 38px;
@@ -58,6 +62,7 @@
             border-radius: 6px;
             color: #FFFFFF;
             font-weight: 700;
+            cursor: pointer;
         }
 
         .menuNavigate--link{
